--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/fashionist
+MONGO_URI=mongodb+srv://samsonmwangonda205_db_user:msone123@cluster0.ngkiks2.mongodb.net/fashionist
 JWT_SECRET=supersecretkey
